# sql-scale-test

./: .gitignore  README.md  docker-compose.yaml  generator.py  locustfile.py  pyproject.toml
.gemini/: settings.json
.gemini/policies/: mark_down_write.md
.gemini/skills/sql-performance-tester/: SKILL.md
.gemini/skills/sql-performance-tester/references/: postgresql-optimization.md
.gemini/skills/sql-performance-tester/scripts/: import_data.sh
db-init/: 01-schema.sql
monitoring/: prometheus.yml
